<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Observing Locations</string>
    <string name="select_location">Select Location</string>
    <string name="settings">Settings</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="location_name">Location Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation (m)</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="set_as_preferred">Set as Preferred</string>
    <string name="preferred_location">Preferred Location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="no_locations_saved">No locations saved yet</string>
    <string name="add_your_first_location">Add your first observing location</string>
    <string name="location_saved">Location saved successfully</string>
    <string name="location_deleted">Location deleted</string>
    <string name="preferred_location_set">Preferred location updated</string>
    <string name="error_invalid_coordinates">Please enter valid coordinates</string>
    <string name="error_location_name_required">Location name is required</string>
    <string name="error_getting_location">Unable to get current location</string>
    <string name="permission_location_rationale">Location permission is needed to get your current position</string>
    <string name="coordinate_format">Coordinate Format</string>
    <string name="decimal_degrees">Decimal Degrees</string>
    <string name="degrees_minutes_seconds">Degrees, Minutes, Seconds</string>
    <string name="welcome_title">Welcome to Observing Locations</string>
    <string name="welcome_description">Manage your favorite stargazing and observing locations. Set a preferred location for quick access to your most-used observing site.</string>
    <string name="current_preferred_location">Current Preferred Location</string>
    <string name="no_preferred_location">No preferred location set</string>
    <string name="preferred_location_format">%1$s\n%2$s</string>
    <string name="select_observing_location">Select Observing Location</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="clear_preferred_location">Clear Preferred Location</string>
    <string name="preferred">PREFERRED</string>
    <string name="elevation_format">Elevation: %dm</string>
    <string name="edit">Edit</string>
    <string name="coordinates">Coordinates</string>
    <string name="location_preferences">Location Preferences</string>
    <string name="general_preferences">General Preferences</string>
    <string name="coordinate_format">Coordinate Format</string>
    <string name="show_elevation">Show Elevation</string>
    <string name="show_elevation_summary">Display elevation information when available</string>
    <string name="auto_detect_location">Auto-detect Location</string>
    <string name="auto_detect_location_summary">Automatically detect GPS location when adding new locations</string>
    <string name="edit_location">Edit Location</string>
    <string name="error_location_name_required">Location name is required</string>
    <string name="error_invalid_coordinates">Please enter valid coordinates</string>
</resources>
