<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/location_preferences"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="decimal"
            android:entries="@array/coordinate_format_entries"
            android:entryValues="@array/coordinate_format_values"
            android:key="coordinate_format"
            android:summary="%s"
            android:title="@string/coordinate_format"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/general_preferences"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_elevation"
            android:summary="@string/show_elevation_summary"
            android:title="@string/show_elevation"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_detect_location"
            android:summary="@string/auto_detect_location_summary"
            android:title="@string/auto_detect_location"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
